--- a/register.html
+++ b/register.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>הרשמה להגרלה</title>
+    <title>ברוכים הבאים לשיר-בוט</title>
     <link rel="stylesheet" href="site/styles.css">
     <link rel="stylesheet" href="site/personal.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -86,13 +86,13 @@ document.addEventListener("DOMContentLoaded", function() {
   // Create the HTML content you want to add to the modal
   var htmlContent = `
 <div class="refined">
-    <h2>הרשמה מהירה</h2>
-	<p>כדי שאתה וחברך תכנסו להגרלה, יש להירשם כעת</p>
+    <h2>ברוכים הבאים לשיר-בוט!</h2>
+	<p>רגע לפני שאנחנו מעבירים אותך לאתר שיר-בוט<br>כדי שאתה וחברך תכנסו להגרלה, יש להירשם כעת</p>
     <iframe src="${iframeSrc}" style="max-width: 100%" width="400" height="400" frameborder="0" marginheight="0" marginwidth="0">טוען...</iframe>
 
 	<p><b>מעוניין להגדיל את סיכויי הזכייה שלך פי 100?<a style="" id="instructionsButton">לחץ כאן כעת להוראות נוספות!</a></b></p>
     <br>
-	<a class="confirm-button" href="https://nhlocal.github.io/shir-bot/">לסיום ומעבר לאתר</a>
+	<a class="confirm-button" href="https://nhlocal.github.io/shir-bot/">לסיום ומעבר לשיר-בוט</a>
 </div>
   `;
 
@@ -128,7 +128,7 @@ document.getElementById('instructionsButton').addEventListener('click', function
     </ol>
 	<b>הפיצו את הבשורה לחבריכם ועל כל משתמש נוסף שיכנס לאתר דרככם, תכנסו להגרלה פעם נוספת!</b>
   </div>
-  <a class="confirm-button" href="https://nhlocal.github.io/shir-bot/">אישור ומעבר לאתר</a><br><br>
+  <a class="confirm-button" href="https://nhlocal.github.io/shir-bot/">סיום ומעבר לשיר-בוט</a><br><br>
   <p Style="font-size: 14px">הסתבכם? רוצים לשלוח גם בפלטפורמות אחרות? העתיקו את הקישור האוטומטי שלכם ושלחו לחבריכם בכל דרך שתרצו!</p>
 <div dir="ltr" class="copy-container">
   <input type="text" size="20" dir="ltr" id="text1" value="https://nhlocal.github.io/shir-bot/register?sourcemail=" readonly> +
