חסימה זמנית של הדף

--- a/register.html
+++ b/register.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html>
+
+
 <head>
+<script>
+    window.onload = function () {
+        window.location.href = "https://nhlocal.github.io/shir-bot/";
+    }
+</script>
+
     <title>ברוכים הבאים לשיר-בוט</title>
     <link rel="stylesheet" href="site/styles.css">
     <link rel="stylesheet" href="site/personal.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" type="image/x-icon" href="site/favicon.ico">
 	<script src="site/messages.js"></script>
+
+
 <style>
 .copy-container input[type="text"],
 .copy-container input[type="email"] {
