--- a/register.html
+++ b/register.html
@@ -14,6 +14,13 @@
     <link rel="stylesheet" href="site/personal.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" type="image/x-icon" href="site/favicon.ico">
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-TGD4VQW4X8"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+	gtag('config', 'G-TGD4VQW4X8');
+	</script>
 	<script src="site/messages.js"></script>
 
 
