--- a/register.html
+++ b/register.html
@@ -99,7 +99,7 @@ if (urlParams.has('sourcemail') && urlParams.get('sourcemail') === 'campaign') {
     var htmlContent = `
     <div class="refined">
         <h2>ברוכים הבאים לשיר-בוט!</h2>
-        <p>רוצים להכנס להגרלה הגדולה ללא תשלום?</p>
+        <p>הכנסו עכשיו להגרלה על 4 מנויים למאגר מוזיקה בדרייב המכיל <b>500 גי'גה</b> של תוכן מוזיקלי ויותר!</p>
 
 <p><b>פרס ראשון:</b><br>
 מנוי חינם למאגר המוזיקלי בדרייב מזמן הזכייה ועד ינואר 2025 + מנוי לחבר לבחירתכם! - בשווי 300 ₪</p>
@@ -119,7 +119,7 @@ if (urlParams.has('sourcemail') && urlParams.get('sourcemail') === 'campaign') {
     var htmlContent = `
     <div class="refined">
         <h2>ברוכים הבאים לשיר-בוט!</h2>
-        <p>רגע לפני שאנחנו מעבירים אותך לאתר שיר-בוט<br>כדי שאתה וחברך תכנסו להגרלה, יש להירשם כעת</p>
+        <p>רגע... רוצים להכנס להגרלה על 4 מנויים למאגר מוזיקה בדרייב המכיל <b>500 גי'גה</b> של תוכן מוזיקלי ויותר?!</p>
         <iframe src="${iframeSrc}" style="max-width: 100%" width="400" height="400" frameborder="0" marginheight="0" marginwidth="0">טוען...</iframe>
         <p><b>מעוניין להגדיל את סיכויי הזכייה שלך פי 100?<a style="" id="instructionsButton">לחץ כאן כעת להוראות נוספות!</a></b></p>
         <br>
