--- a/register.html
+++ b/register.html
@@ -110,9 +110,9 @@ if (urlParams.has('sourcemail') && urlParams.get('sourcemail') === 'campaign') {
 <p><b>פרס שלישי:</b><br>
 מנוי חינם למאגר המוזיקלי בדרייב לשלושה חודשים - בשווי 50 ₪</p>
 
-        <p><b>על כל משתמש שיכנס וירשם לאתר דרככם, תכנסו להגרלה פעם נוספת!</b></p>
+        <p><b>ההגרלה תתקיים בט"ז חשון תשפ"ד</b></p>
     </div>
-	<a style="" id="instructionsButton">לחץ כאן כעת להוראות נוספות!</a>
+	<a style="" id="instructionsButton">איך אני יכול לקבל כרטיס?</a>
     `;
 } else {
     // Create the default HTML content
