--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ const musicInDriveElement = document.getElementById("music-in-drive");
 musicInDriveElement.addEventListener("click", function() {
   // Send the event to Google Analytics
   gtag('event', 'conversion', {
-	'send_to': 'G-TGD4VQW4X8',
+    'event_category': 'Registration',
 	'value': 1, // NIS 1
 	'currency': 'NIS' // Currency type
   });
