הגדרת קישורי קמפיין אישיים

--- a/register.html
+++ b/register.html
@@ -260,7 +260,7 @@ function copyFormattedText() {
                             </p>
                             <!-- Add a button to visit the website -->
                             <p style="margin-top: 20px;">
-                                <a href="https://nhlocal.github.io/shir-bot/register?sourcemail=${userMail}" style="display: inline-block; background-color: #5D3AB0; color: #fff; padding: 10px 20px; font-size: 20px; border-radius: 5px; text-decoration: none; transition: background-color 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;">בקרו באתר</a>
+                                <a href="https://nhlocal.github.io/shir-bot/register?sourcemail=${userMail}&utm_source=personal_sending_email&utm_medium=mail&utm_campaign=Lottery_2023&utm_id=Lottery_2023" style="display: inline-block; background-color: #5D3AB0; color: #fff; padding: 10px 20px; font-size: 20px; border-radius: 5px; text-decoration: none; transition: background-color 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;">בקרו באתר</a>
                             </p>
                     </tr>
                 </table>
@@ -269,7 +269,7 @@ function copyFormattedText() {
                         <td style="text-align: center;">
                             <b style="font-size: 16px; line-height: 1.6; color: #555;">
                                 מעוניינים להיכנס להגרלה על מנוי כפול לשנה<br>למאגר בדרייב המכיל 500 ג'יגה של מוזיקה ושמע<br>בשווי כולל של 300 ש"ח?<br>
-                                <a href="https://nhlocal.github.io/shir-bot/register?sourcemail=${userMail}" style="margin-top: 8px; display: inline-block; background-color: white; color: #5D3AB0; padding: 3px; font-size: 16px; border-radius: 5px;">הירשמו כעת!</a>
+                                <a href="https://nhlocal.github.io/shir-bot/register?sourcemail=${userMail}&utm_source=personal_sending_email&utm_medium=mail&utm_campaign=Lottery_2023&utm_id=Lottery_2023" style="margin-top: 8px; display: inline-block; background-color: white; color: #5D3AB0; padding: 3px; font-size: 16px; border-radius: 5px;">הירשמו כעת!</a>
                             </b><br><br>
                             <b style="font-size: 16px; line-height: 1.6; color: #4A2E8C; text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;">
                                 רוצים להגדיל את סיכויי הזכיה שלכם?<br>היכנסו לקישור לעיל ושימו לב לפרטים!<br>כל משתמש נוסף שיכנס לאתר דרככם<br>יזכה אתכם בכניסה נוספת להגרלה!
