הגדרת קישורי קמפיין

--- a/register.html
+++ b/register.html
@@ -129,7 +129,7 @@ if (urlParams.has('sourcemail') && urlParams.get('sourcemail') === 'campaign') {
         <iframe src="${iframeSrc}" style="max-width: 100%" width="400" height="400" frameborder="0" marginheight="0" marginwidth="0">טוען...</iframe>
         <p><b>מעוניין להגדיל את סיכויי הזכייה שלך פי 100?<a style="" id="instructionsButton">לחץ כאן כעת להוראות נוספות!</a></b></p>
         <br>
-        <a class="confirm-button" href="https://nhlocal.github.io/shir-bot/">לסיום ומעבר לשיר-בוט</a>
+        <a class="confirm-button" href="https://nhlocal.github.io/shir-bot/?utm_source=personal_sending_email&utm_medium=mail&utm_campaign=Lottery_2023&utm_id=Lottery_2023">לסיום ומעבר לשיר-בוט</a>
     </div>
     `;
 }
@@ -166,7 +166,7 @@ document.getElementById('instructionsButton').addEventListener('click', function
     </ol>
 	<b>הפיצו את הבשורה לחבריכם ועל כל משתמש נוסף שיכנס לאתר דרככם, תכנסו להגרלה פעם נוספת!</b>
   </div>
-  <a class="confirm-button" href="https://nhlocal.github.io/shir-bot/">סיום ומעבר לשיר-בוט</a><br><br>
+  <a class="confirm-button" href="https://nhlocal.github.io/shir-bot/?utm_source=register_page&utm_medium=web&utm_campaign=Lottery_2023&utm_id=Lottery_2023">סיום ומעבר לשיר-בוט</a><br><br>
   <p Style="font-size: 14px">הסתבכם? רוצים לשלוח גם בפלטפורמות אחרות? העתיקו את הקישור האוטומטי שלכם ושלחו לחבריכם בכל דרך שתרצו!</p>
 <div dir="ltr" class="copy-container">
   <input type="text" size="20" dir="ltr" id="text1" value="https://nhlocal.github.io/shir-bot/register?sourcemail=" readonly disabled> +
