--- a/index.html
+++ b/index.html
@@ -25,19 +25,10 @@
   <link rel="stylesheet" href="site/styles.css">
   <link rel="stylesheet" href="site/personal.css">
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-TGD4VQW4X8"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-TGD4VQW4X8');
-  </script>
-<script type="text/javascript">
-    (function(c,l,a,r,i,t,y){
-        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
-        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-    })(window, document, "clarity", "script", "j4f7w6xhpe");
-</script>
+  <script src="https://nhlocal.github.io/general-settings.js"></script>
+  <script src="site/new-site.js"></script>
+  <script src="site/new-script.js"></script>
+  <script src="site/messages.js"></script>
 </head>
 
 <body dir="rtl" style="background-color:#FFFEDB;">
@@ -177,10 +168,6 @@
 	</div>
 </div>
 
-
-  <script src="site/new-script.js"></script>
-  <script src="site/messages.js"></script>
-  <script src="site/new-web.js"></script>
   
   <script>
 // מאזיני אירועים עבור ניתוח גוגל
