--- a/register.html
+++ b/register.html
@@ -7,21 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" type="image/x-icon" href="site/favicon.ico">
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-TGD4VQW4X8"></script>
-	<script>
-	window.dataLayer = window.dataLayer || [];
-	function gtag(){dataLayer.push(arguments);}
-	gtag('js', new Date());
-	gtag('config', 'G-TGD4VQW4X8');
-	</script>
-	<script src="site/messages.js"></script>
-<script type="text/javascript">
-    (function(c,l,a,r,i,t,y){
-        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
-        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-    })(window, document, "clarity", "script", "j4f7w6xhpe");
-</script>
-
+	<script src="https://nhlocal.github.io/general-settings.js"></script>
 <style>
 .copy-container input[type="text"],
 .copy-container input[type="email"] {
