הסתרת שורת הכותרת

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
   <div id="resultsTable">
     <table>
-      <thead>
+      <thead style="display: none">
         <tr>
           <th>מספר סידורי</th>
           <th>שם השיר</th>
