--- a/old.html
+++ b/old.html
@@ -19,7 +19,7 @@
   <meta name="keywords" content="song downloads, Chassidic songs, Jewish music, Shir-Bot, song database, song search, Chassidic singers, Chassidic music, fast download, serial number, album, singer, Chassidic, Judaism, lyrics, Torah, musicality, holidays, art">
   <meta name="keywords" content="חיפוש שירים, שירים חסידיים,מוזיקה חסידית, מוזיקה יהודית">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-  <title>שיר-בוט</title>
+  <title>שיר-בוט - ישן</title>
   <link rel="canonical" href="https://nhlocal.github.io/shir-bot/old" />
   <link rel="icon" type="image/x-icon" href="site/favicon.ico">
   <link rel="stylesheet" href="site/styles.css">
