קישור לטופס רישום + מקור כניסה

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 </div>
   <script src="site/new-script.js"></script>
   <script src="site/messages.js"></script>
-  <script src="site/new-site.js"></script>
+  <script src="site/ads.js"></script>
   
   <script>
 // מאזיני אירועים עבור ניתוח גוגל
