--- a/register.html
+++ b/register.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="he">
 <head>
     <title>ברוכים הבאים לשיר-בוט</title>
     <link rel="stylesheet" href="site/styles.css">
