עדכון כפתור תשלום + תודה

--- a/site/pay.html
+++ b/site/pay.html
@@ -26,7 +26,7 @@
 }
 
 .message {
-  font-size: 20px; /* Increase text size */
+  font-size: 20px;
 }
 
 .email-link {
@@ -53,12 +53,12 @@
 </head>
 <body dir="rtl" style="background-color:#FFFEDB;">
   <div class="container">
-    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" title="PayPal היא הדרך הקלה והבטוחה יותר לשלם באינטרנט!">
       <input type="hidden" name="cmd" value="_s-xclick" />
-      <input type="hidden" name="hosted_button_id" value="7FQPX33DHUVXS" />
+      <input type="hidden" name="hosted_button_id" value="M4C6E5QU22BF4" />
       <input type="hidden" name="currency_code" value="ILS" />
       <div class="button-container">
-        <button class="helpButton"  style="padding: 20px; font-size: 30px" type="submit">
+        <button class="helpButton"  style="padding: 20px; font-size: 30px; border-radius: 20px" type="submit">
           שלם עכשיו
         </button>
       </div>
