--- a/site/‏‏register - עותק.html
+++ b/site/‏‏register - עותק.html
@@ -86,7 +86,7 @@ document.addEventListener("DOMContentLoaded", function() {
 
 // Check if the URL contains the "sourcemail" parameter with the value "campaign"
 const urlParams = new URLSearchParams(window.location.search);
-if (urlParams.has('sourcemail') && urlParams.get('sourcemail') === 'campaign' || !urlParams.has('sourcemail')) {
+if (urlParams.has('sourcemail') && urlParams.get('sourcemail') === 'campaign') {
     // Create the HTML content for the alternative message
     var htmlContent = `
     <div class="refined">
@@ -139,31 +139,33 @@ document.getElementById('instructionsButton').addEventListener('click', function
   newInstructions.innerHTML = `
   <div class="refined">
     <h2>כיצד תכנסו להגרלה כפול 100?</h2>
-	<br>
+	<p>תוכלו לעשות זאת במספר צעדים פשוטים</p>
     <ol style="list-style-type: none;">
-      <li><b>♪</b> מלאו את כתובת המייל שלכם והעתיקו את הקישור היחודי שלכם</li>
-      <li><b>♪</b> הפיצו את הקישור לחבריכם. בצ'אט, במייל או בכל דרך אחרת</li>
+	  <li><b>♪</b> רשמו את המייל שלכם: <input placeholder="address@gmail.com" dir="ltr" type="email" id="usermail" size="20" />
+	  <p style="font-size: 12px; padding: 0px; margin: 0px">*הכנסת מייל תקין היא הכרחית כדי שנוכל להכניס אתכם להגרלה!</p></li>
+      <li><b>♪</b> <a class="refined" onclick="copyFormattedText()">לחצו כאן</a> להעתקת ההודעה המוכנה ללוח</li>
+	  <li><b>♪</b> <a class="refined" href="https://mail.google.com/mail/u/0/?view=cm&fs=1&tf=1&source=mailto&su=%E2%9C%A8+%D7%A8%D7%95%D7%A6%D7%99%D7%9D+%D7%9C%D7%94%D7%95%D7%A8%D7%99%D7%93+%D7%A1%D7%99%D7%A0%D7%92%D7%9C%D7%99%D7%9D+%D7%91%D7%90%D7%95%D7%A4%D7%9F+%D7%97%D7%95%D7%A4%D7%A9%D7%99+%D7%9E%D7%AA%D7%95%D7%9A+%D7%9E%D7%90%D7%92%D7%A8+%D7%A9%D7%9C+70%2C000+%D7%A9%D7%99%D7%A8%D7%99%D7%9D%3F+%D7%9B%D7%93%D7%90%D7%99+%D7%A9%D7%AA%D7%A6%D7%99%D7%A6%D7%95+%D7%A8%D7%92%D7%A2...&to=" target="_blank">לחצו כאן</a> לפתיחת הודעת מייל באופן אוטומטי</li>
+	  <p style="display: none; font-size: 12px; padding: 0px; margin: 0px">לא עבד? <a class="refined" href="mailto:?subject=%E2%9C%A8+%D7%A8%D7%95%D7%A6%D7%99%D7%9D+%D7%9C%D7%94%D7%95%D7%A8%D7%99%D7%93+%D7%A1%D7%99%D7%A0%D7%92%D7%9C%D7%99%D7%9D+%D7%91%D7%90%D7%95%D7%A4%D7%9F+%D7%97%D7%95%D7%A4%D7%A9%D7%99+%D7%9E%D7%AA%D7%95%D7%9A+%D7%9E%D7%90%D7%92%D7%A8+%D7%A9%D7%9C+70%2C000+%D7%A9%D7%99%D7%A8%D7%99%D7%9D%3F+%D7%9B%D7%93%D7%90%D7%99+%D7%A9%D7%AA%D7%A6%D7%99%D7%A6%D7%95+%D7%A8%D7%92%D7%A2..." target="_blank">לחצו כאן</a></p>
+      <li><b>♪</b> הדביקו את התוכן בהודעת המייל</li>
+      <li><b>♪</b> שלחו לחבריכם</li>
 	  <br>
     </ol>
-	
-	<div dir="ltr" class="copy-container">
-	  <input type="text" size="20" dir="ltr" id="text1" value="https://nhlocal.github.io/shir-bot/register?sourcemail=" readonly disabled> +
-	  <input id="text2" size="15" dir="ltr" type="email" placeholder="הכנס כתובת מייל">
-	  <button id="copy-button" onclick="copyToClipboard()">העתק</button>
-	</div><br>
-
 	<b>הפיצו את הבשורה לחבריכם ועל כל משתמש נוסף שיכנס לאתר דרככם, תכנסו להגרלה פעם נוספת!</b>
-	
-
   </div>
-  <a class="confirm-button" href="https://nhlocal.github.io/shir-bot/?utm_source=register_page&utm_medium=web&utm_campaign=Lottery_2023&utm_id=Lottery_2023">סיום ומעבר לשיר-בוט</a>
+  <a class="confirm-button" href="https://nhlocal.github.io/shir-bot/?utm_source=register_page&utm_medium=web&utm_campaign=Lottery_2023&utm_id=Lottery_2023">סיום ומעבר לשיר-בוט</a><br><br>
+  <p Style="font-size: 14px">הסתבכם? רוצים לשלוח גם בפלטפורמות אחרות? העתיקו את הקישור האוטומטי שלכם ושלחו לחבריכם בכל דרך שתרצו!</p>
+<div dir="ltr" class="copy-container">
+  <input type="text" size="20" dir="ltr" id="text1" value="https://nhlocal.github.io/shir-bot/register?sourcemail=" readonly disabled> +
+  <input id="text2" size="15" dir="ltr" type="email" placeholder="הכנס כתובת מייל">
+  <button id="copy-button" onclick="copyToClipboard()">העתק</button>
+</div>
 
 
 
 
 <div class="refined">
 <br>
-  <a id="notesA">מידע נוסף</a>
+  <a id="notesA">הבהרות חשובות</a>
   	<ol id="notes" class="note" style="display: none; list-style-type: none;">
 	  <li>א. ההגרלה תיערך בט"ז חשון תשפ"ד, על ידי הבעלים של האתר. הודעה תימסר לזוכה במייל. מנויים קיימים יוכלו להעביר את הזכייה לחבר.</li>
 	  <li>ב. על כל משתמש נוסף שיכנס דרך הקישור האישי שלכם, תיכנסו להגרלה פעם נוספת. אך הדבר מותנה ברישום של המשתמש בכניסה לאתר.</li>
