--- a/register.html
+++ b/register.html
@@ -138,7 +138,7 @@ document.getElementById('instructionsButton').addEventListener('click', function
   var newInstructions = document.createElement('div');
   newInstructions.innerHTML = `
   <div class="refined">
-    <h2>כיצד תכנסו להגרלה כפול 100?</h2>
+    <h2>כך תכנסו להגרלה עשרות פעמים בקלי קלות</h2>
 	<br>
     <ol style="list-style-type: none;">
       <li><b>♪</b> מלאו את כתובת המייל שלכם והעתיקו את הקישור היחודי שלכם</li>
