--- a/index.html
+++ b/index.html
@@ -57,8 +57,11 @@
 
       <button type="submit" class="search-button">חפש</button>
       <div class="filter-container">
+	    <button id="newsFilter" class="filter-button-light">סינגלים חדשים</button>
+
         <button id="singleFilter" class="filter-button-light">הצג את כל השירים</button>
-      </div>
+	  </div>
+
     </form>
   </div>
 
@@ -160,7 +163,7 @@
 		</div>
 	</div>
 </div>
-  <script src="site/new-script.js"></script>
+  <script src="site/search.js"></script>
   <script src="site/messages.js"></script>
   <script src="site/ads.js"></script>
   
