--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
 	  
 	<div class="input-container">
 	  <input type="text" id="searchInput" name="searchInput" class="search-input awesomplete" class="search-input" placeholder="הזן מילות מפתח..." autofocus>
-	  <div id="textBubble" class="text-bubble">לחפש במאגר של 70,000 שירים</div>
+	  <div id="textBubble" class="text-bubble">נסה לחפש שירים חדשים שיצאו לאחרונה!</div>
 	</div>
 
       <button type="submit" class="search-button">חפש</button>
       <div class="filter-container">
-	    <button id="newsFilter" class="filter-button-light">סינגלים חדשים</button>
-        <button id="singleFilter" class="filter-button-light">הצג את כל השירים</button>
+	    <button id="newsFilter" class="filter-button-light">הצג שירים חדשים</button>
+        <button id="singleFilter">הצג את כל השירים</button>
 	  </div>
 
     </form>
