--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
 
 		<!-- Step 3 -->
 		<div class="help-modal" style="display: none;">
-			<h2>שלב ג' - בחירת מספר</h2>
-			<p>לחץ על <b>המספר</b> של השיר שבחרת, שים לב שמדובר בסינגל ולא בשיר מאלבום. תוכל לבדוק האם שם האלבום הוא "סינגלים"</p>
+			<h2>שלב ג' - בחירת שיר</h2>
+			<p>לחץ על השיר שבחרת, שים לב שמדובר בסינגל ולא בשיר מאלבום. תוכל לבדוק האם שם האלבום או האמן מכיל את המילה "סינגלים"</p>
 			<img src="help/2.png" alt="תמונה בינונית">
 			<div class="prev-step" onclick="showStep(1)">◄</div>
 			<div class="next-step" onclick="showStep(-1)">►</div>
@@ -156,7 +156,7 @@
 		<!-- Step 4 -->
 		<div class="help-modal" style="display: none;">
 			<h2>שלב ד' - הורדת השיר</h2>
-			<p>כעת לא נותר לך אלא להמתין, ותוך זמן קצר השיר שבחרת ירד ישירות למחשב שלך</p>
+			<p>כעת לא נותר לך אלא להמתין, ותוך זמן קצר השיר שבחרת ירד ישירות למחשב שלך</p><p>ניתן להמשיך להשתמש באתר בזמן ההורדה</p>
 			<img src="help/4.2.png" alt="תמונה בינונית">
 			<div class="prev-step" onclick="showStep(1)">◄</div>
 			<div class="next-step" onclick="showStep(-1)">►</div>
