--- a/site/pay.html
+++ b/site/pay.html
@@ -55,7 +55,7 @@
   <div class="container">
     <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" title="PayPal היא הדרך הקלה והבטוחה יותר לשלם באינטרנט!">
       <input type="hidden" name="cmd" value="_s-xclick" />
-      <input type="hidden" name="hosted_button_id" value="M4C6E5QU22BF4" />
+      <input type="hidden" name="hosted_button_id" value="ZFY3LH4NNP8XS" />
       <input type="hidden" name="currency_code" value="ILS" />
       <div class="button-container">
         <button class="helpButton"  style="padding: 20px; font-size: 30px; border-radius: 20px" type="submit">
