--- a/site/thank.html
+++ b/site/thank.html
@@ -7,42 +7,110 @@
   <link rel="stylesheet" type="text/css" href="personal.css">
   <title>דף תודה</title>
   <style>
-.container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-}
-
-h3 {
-  font-size: 52px; /* Adjust the size as needed */
-  color: transparent;
-  text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.5);
-  background-image: linear-gradient(45deg, #FF0000, #FFA500, #FFFF00, #008000);
-  background-clip: text;
-  -webkit-background-clip: text;
-  text-fill-color: transparent;
-}
+    .container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+      position: relative;
+    }
+	
+	a {
+	  background-color: rgba(0, 0, 0, 0);
+	}
 
 
-.message {
-  font-size: 20px;
-}
+    h3 {
+      font-size: 52px; /* Adjust the size as needed */
+      color: transparent;
+      text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.5);
+      background-image: linear-gradient(45deg, #FF0000, #FFA500, #FFFF00, #008000);
+      background-clip: text;
+      -webkit-background-clip: text;
+      text-fill-color: transparent;
+    }
 
+    .message {
+      font-size: 20px;
+    }
 
+    .ads-container {
+      display: flex;
+      justify-content: space-around;
+      width: 100%;
+      position: absolute;
+      bottom: 0;
+      padding: 20px;
+      background-color: #FFF49C;
+    }
+
+    .ad-square {
+      width: 250px;
+      height: 200px;
+      background-color: #FFFEDB;
+	  border-radius: 10px;
+      margin: 0 10px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+    }
+
+    .ad-square img {
+      width: 100px;
+    }
+
+    .ad-title {
+      font-size: 16px;
+      font-weight: bold;
+      margin-bottom: 10px;
+    }
+
+    .ad-description {
+      font-size: 14px;
+    }
   </style>
 </head>
 <body dir="rtl" style="background-color:#FFFEDB;">
   <div class="container">
     <h3>מזל טוב!</h3>
-	<form>
-    <p class="message">
-	  תודה לכם על שקניתם את המאגר,
-	  אתם תצורפו למאגר תוך מספר דקות!<br><br>
-	  הודעה עם כלל הפרטים תשלח אליכם למייל
-	</p>
+    <form>
+      <p class="message">
+        תודה לכם על שקניתם את המאגר,
+        אתם תצורפו למאגר תוך מספר דקות!<br><br>
+        הודעה עם כלל הפרטים תשלח אליכם למייל
+      </p>
+	  <br>
+	  <h4>נסו גם את המוצרים החינמיים שלנו:</h4><br><br><br><br>
     </form>
+	
+  </div>
+
+  <!-- Ads Section -->
+  <div class="ads-container">
+    <div class="ad-square">
+      <div class="ad-title">מסדר הסינגלים</div>
+      <div class="ad-description">תוכנה שממיינת סינגלים באמצעות אוטומציה מתקדמת</div>
+      <a href="https://nhlocal.github.io/Singles-Sorter?utm_source=nhlocal.github.io/shir-bot/site/thank&utm_medium=site" target="_blank">
+        <img src="https://nhlocal.github.io/Singles-Sorter/site/icon.png" alt="Product 1">
+      </a>
+    </div>
+    <div class="ad-square">
+      <div class="ad-title">שיר-בוט</div>
+      <div class="ad-description">הורדת סינגלים חינם מתוך המאגר המלא שלנו</div>
+      <a href="https://nhlocal.github.io/shir-bot?utm_source=nhlocal.github.io/shir-bot/site/thank&utm_medium=site" target="_blank">
+        <img src="https://nhlocal.github.io/shir-bot/archive/logo1.png">
+      </a>
+    </div>
+    <div class="ad-square">
+      <div class="ad-title">רשימת סקריפטים שימושיים</div>
+      <div class="ad-description">להקלה על השימוש במחשב</div>
+      <a href="https://nhlocal.github.io?utm_source=nhlocal.github.io/shir-bot/site/thank&utm_medium=site" target="_blank">
+        <img src="https://nhlocal.github.io/NH.LOCAL.jpg">
+      </a>
+    </div>
   </div>
 </body>
 </html>
