--- a/site/thank.html
+++ b/site/thank.html
@@ -93,21 +93,21 @@
     <div class="ad-square">
       <div class="ad-title">מסדר הסינגלים</div>
       <div class="ad-description">תוכנה שממיינת סינגלים באמצעות אוטומציה מתקדמת</div>
-      <a href="https://nhlocal.github.io/Singles-Sorter?utm_source=nhlocal.github.io/shir-bot/site/thank&utm_medium=site" target="_blank">
+      <a href="https://nhlocal.github.io/Singles-Sorter?utm_source=thank-page&utm_medium=site" target="_blank">
         <img src="https://nhlocal.github.io/Singles-Sorter/site/icon.png" alt="Product 1">
       </a>
     </div>
     <div class="ad-square">
       <div class="ad-title">שיר-בוט</div>
       <div class="ad-description">הורדת סינגלים חינם מתוך המאגר המלא שלנו</div>
-      <a href="https://nhlocal.github.io/shir-bot?utm_source=nhlocal.github.io/shir-bot/site/thank&utm_medium=site" target="_blank">
+      <a href="https://nhlocal.github.io/shir-bot?utm_source=thank-page&utm_medium=site" target="_blank">
         <img src="https://nhlocal.github.io/shir-bot/archive/logo1.png">
       </a>
     </div>
     <div class="ad-square">
       <div class="ad-title">רשימת סקריפטים שימושיים</div>
       <div class="ad-description">להקלה על השימוש במחשב</div>
-      <a href="https://nhlocal.github.io?utm_source=nhlocal.github.io/shir-bot/site/thank&utm_medium=site" target="_blank">
+      <a href="https://nhlocal.github.io?utm_source=thank-page&utm_medium=site" target="_blank">
         <img src="https://nhlocal.github.io/NH.LOCAL.jpg">
       </a>
     </div>
