הסרת זיהוי מודעה

--- a/site/thank.html
+++ b/site/thank.html
@@ -35,7 +35,7 @@
       font-size: 20px;
     }
 
-    .ads-container {
+    .get-container {
       display: flex;
       justify-content: space-around;
       width: 100%;
@@ -45,7 +45,7 @@
       background-color: #FFF49C;
     }
 
-    .ad-square {
+    .get-square {
       width: 250px;
       height: 200px;
       background-color: #FFFEDB;
@@ -58,17 +58,17 @@
       text-align: center;
     }
 
-    .ad-square img {
+    .get-square img {
       width: 100px;
     }
 
-    .ad-title {
+    .get-title {
       font-size: 16px;
       font-weight: bold;
       margin-bottom: 10px;
     }
 
-    .ad-description {
+    .get-description {
       font-size: 14px;
     }
   </style>
@@ -88,25 +88,25 @@
 	
   </div>
 
-  <!-- Ads Section -->
-  <div class="ads-container">
-    <div class="ad-square">
-      <div class="ad-title">מסדר הסינגלים</div>
-      <div class="ad-description">תוכנה שממיינת סינגלים באמצעות אוטומציה מתקדמת</div>
+
+  <div class="get-container">
+    <div class="get-square">
+      <div class="get-title">מסדר הסינגלים</div>
+      <div class="get-description">תוכנה שממיינת סינגלים באמצעות אוטומציה מתקדמת</div>
       <a href="https://nhlocal.github.io/Singles-Sorter?utm_source=thank-page&utm_medium=site" target="_blank">
         <img src="https://nhlocal.github.io/Singles-Sorter/site/icon.png" alt="Product 1">
       </a>
     </div>
-    <div class="ad-square">
-      <div class="ad-title">שיר-בוט</div>
-      <div class="ad-description">הורדת סינגלים חינם מתוך המאגר המלא שלנו</div>
+    <div class="get-square">
+      <div class="get-title">שיר-בוט</div>
+      <div class="get-description">הורדת סינגלים חינם מתוך המאגר המלא שלנו</div>
       <a href="https://nhlocal.github.io/shir-bot?utm_source=thank-page&utm_medium=site" target="_blank">
         <img src="https://nhlocal.github.io/shir-bot/archive/logo1.png">
       </a>
     </div>
-    <div class="ad-square">
-      <div class="ad-title">רשימת סקריפטים שימושיים</div>
-      <div class="ad-description">להקלה על השימוש במחשב</div>
+    <div class="get-square">
+      <div class="get-title">רשימת סקריפטים שימושיים</div>
+      <div class="get-description">להקלה על השימוש במחשב</div>
       <a href="https://nhlocal.github.io?utm_source=thank-page&utm_medium=site" target="_blank">
         <img src="https://nhlocal.github.io/NH.LOCAL.jpg">
       </a>
