--- a/artists.html
+++ b/artists.html
@@ -25,6 +25,7 @@
   <link rel="icon" type="image/x-icon" href="site/favicon.ico">
   <link rel="stylesheet" href="site/styles.css">
   <link rel="stylesheet" href="site/personal.css">
+  <link rel="stylesheet" href="artists/artist-style.css">
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-TGD4VQW4X8"></script>
   <script src="https://nhlocal.github.io/general-settings.js"></script>
 </head>
@@ -103,7 +104,9 @@
 			<button id="nextSection">&gt;</button>
 			
 			<div id="instructions-container" class="instructions-container">
+			
 			</div>
+			<p><small style="text-align: right">המידע והתמונות באדיבות ויקיפדיה</small></p>
 		  </center>
 		</td>
 	  </tr>
