--- a/artists.html
+++ b/artists.html
@@ -26,6 +26,7 @@
   <link rel="stylesheet" href="site/styles.css">
   <link rel="stylesheet" href="site/personal.css">
   <link rel="stylesheet" href="artists/artist-style.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-TGD4VQW4X8"></script>
   <script src="https://nhlocal.github.io/general-settings.js"></script>
 </head>
