הוספת הצעות חיפוש

--- a/index.html
+++ b/index.html
@@ -96,14 +96,19 @@
 	<tbody>
 	  <tr>
 		<td style="border-bottom: 0;" colspan="4">
-		  <center id="instructions">
-			
-			<button id="prevSection">&lt;</button>
-			<button id="nextSection">&gt;</button>
-			
-			<div id="instructions-container" class="instructions-container">
-			</div>
-		  </center>
+
+			<center id="instructions">
+				<div class="small-ad-container">
+					<div class="small-ad-left"></div> <!-- Small ads on the left -->
+					<div id="instructions-container" class="instructions-container">
+						<!-- Content of the large rotating ad goes here -->
+					</div>
+					<div class="small-ad-right"></div> <!-- Small ads on the right -->
+				</div>
+				<button id="prevSection">&lt;</button>
+				<button id="nextSection">&gt;</button>
+			</center>
+
 		</td>
 	  </tr>
 	</tbody>
