--- a/404.html
+++ b/404.html
@@ -39,7 +39,7 @@
 
         button {
 		    font-family: Tahoma, sans-serif;
-            background-color: #007bff;
+            background-color: #4D3091;
             color: white;
             padding: 15px 25px;
             border: none;
@@ -49,7 +49,7 @@
         }
 
         button:hover {
-            background-color: #0056b3;
+            background-color: #5D3AB0;
         }
     </style>
 </head>
