--- a/404.html
+++ b/404.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>שגיאה 404</title>
+	<link rel="icon" type="image/x-icon" href="site/favicon.ico">
     <style>
         body {
             background-color: #ede4f7;
